--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,60 @@
 
-# Created by https://www.gitignore.io/api/emacs
-# Edit at https://www.gitignore.io/?templates=emacs
+# Created by https://www.gitignore.io/api/c,emacs
+# Edit at https://www.gitignore.io/?templates=c,emacs
+
+### C ###
+# Prerequisites
+*.d
+
+# Object files
+*.o
+*.ko
+*.obj
+*.elf
+
+# Linker output
+*.ilk
+*.map
+*.exp
+
+# Precompiled Headers
+*.gch
+*.pch
+
+# Libraries
+*.lib
+*.a
+*.la
+*.lo
+
+# Shared objects (inc. Windows DLLs)
+*.dll
+*.so
+*.so.*
+*.dylib
+
+# Executables
+*.exe
+*.out
+*.app
+*.i*86
+*.x86_64
+*.hex
+
+# Debug files
+*.dSYM/
+*.su
+*.idb
+*.pdb
+
+# Kernel Module Compile Results
+*.mod*
+*.cmd
+.tmp_versions/
+modules.order
+Module.symvers
+Mkfile.old
+dkms.conf
 
 ### Emacs ###
 # -*- mode: gitignore; -*-
@@ -53,4 +107,4 @@ flycheck_*.el
 /network-security.data
 
 
-# End of https://www.gitignore.io/api/emacs
+# End of https://www.gitignore.io/api/c,emacs
